# SteamHighlightForge

./: .gitignore  EXAMPLES.md  README.md  config.yaml  pyproject.toml  quickstart.sh
.github/workflows/: release.yml
app/: package-lock.json  package.json
app/src/: App.tsx  styles.css  types.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: highlights.rs  lib.rs  timeline.rs  video.rs
app/src/components/: ExportDialog.tsx  HighlightPanel.tsx  SessionList.tsx  Timeline.tsx  VideoPreview.tsx
app/src/hooks/: useMpv.ts
gamerecordings/timelines/: main.py  timeline_54843020250630_144345.json  timeline_73020250629_143652.json  timeline_73020250701_132438.json  timeline_73020250714_144821.json  timeline_73020250821_113303.json  timeline_73020251021_141729 - 副本 (2).json  timeline_73020251021_141729 - 副本.json  timeline_73020251030_113113 - 副本.json  timeline_73020251030_123306 - 副本.json  timeline_73020260506_120355.json  timeline_73020260506_131915.json  timeline_73020260507_115638.json  timeline_73020260507_124956.json  timeline_73020260507_134000.json  timeline_73020260507_142732.json
steam_highlight_forge/: __init__.py  __main__.py  cli.py  config.py  highlight_extractor.py  timeline_parser.py  video_processor.py
steam_highlight_forge/games/: __init__.py  base.py  cs2.py
